--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+@view-transition {
+    navigation: auto;
+}
+
 :root {
     --background-surface: #F1F1F3;
     --primaryColor: #C06918;
@@ -27,6 +31,7 @@ main a {
     color: black;
     display: block;
 }
+
 main a:hover {
     scale: 1.05;
     transition: scale 100ms;
@@ -46,7 +51,7 @@ body>header {
     margin: auto;
     display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
 }
 
 body>header * {
@@ -111,11 +116,13 @@ h3 {
 .two-columns div:first-child {
     margin-right: 10px;
 }
+
 .two-columns div {
     flex-grow: 1;
 }
 
-h3, .recipe {
+h3,
+.recipe {
     width: 400px;
 }
 
@@ -123,11 +130,12 @@ h3, .recipe {
     background: white;
     border-radius: 15px;
     padding-bottom: 8px;
-    box-shadow: 0px 6px 6px -10px rgba(0, 0, 0, 0.45), 6px 0 6px -10px rgba(0, 0, 0, 0.45);}
+    box-shadow: 0px 6px 6px -10px rgba(0, 0, 0, 0.45), 6px 0 6px -10px rgba(0, 0, 0, 0.45);
+}
 
 .recipe h4 {
     margin: 0 0 0 12px;
-} 
+}
 
 .recipe p {
     margin: 4px 12px;
@@ -143,6 +151,7 @@ h3, .recipe {
 .recipe.small {
     width: 195px;
 }
+
 .recipe.small img {
     height: 96px;
 }
@@ -171,7 +180,8 @@ button {
     border-radius: 5px;
 }
 
-#recipe, #permissions {
+#recipe,
+#permissions {
     background-color: white;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
@@ -193,7 +203,8 @@ article h3 {
     padding-bottom: 0;
 }
 
-.page dl, .page p {
+.page dl,
+.page p {
     font-size: 0.9em;
 }
 
@@ -207,19 +218,22 @@ article h3 {
     width: 300px;
 }
 
-dl {    
+dl {
     width: 300px;
     display: flex;
     flex-wrap: wrap;
 }
 
-dd, dt {
+dd,
+dt {
     display: block;
     flex-grow: 1;
 }
+
 dt {
     width: 200px;
 }
+
 dd {
     width: 90px;
     margin: 0;
@@ -231,7 +245,7 @@ dd {
 
 .page header img {
     flex-grow: 1;
-    flex: 1;    
+    flex: 1;
     border-top-right-radius: 15px;
 }
 
@@ -247,7 +261,8 @@ dd {
     color: var(--secondaryColor)
 }
 
-#permissions dd, #permissions dt {
+#permissions dd,
+#permissions dt {
     width: 40%;
 }
 
@@ -276,6 +291,7 @@ dd {
     font-weight: bold;
     padding: 0;
 }
+
 #permissions table {
     max-width: 400px;
     margin: auto;
@@ -307,11 +323,11 @@ dd {
     background-color: var(--background-surface);
     padding: 36px;
     display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: space-between;
-	align-items: stretch;
-	align-content: stretch;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: stretch;
+    align-content: stretch;
     row-gap: 12px;
 }
 
